chore: add soap api duration
* pom.xml: remove javax.inject
* ActivityTracker: add getCounters() to get counters > 0
* SoapCollector: return soap api duration + reset logic